--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="280dp"
     android:layout_height="180dp"
     android:layout_gravity="center"
-    app:cardBackgroundColor="@color/white"
+    android:layout_margin="4dp"
     app:cardCornerRadius="8dp"
     app:cardElevation="3dp"
-    android:layout_margin="4dp">
+    app:cardBackgroundColor="@color/white">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -37,7 +36,6 @@
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
-
                 <TextView
                     android:id="@+id/textViewProductPrice"
                     android:layout_width="match_parent"
@@ -46,7 +44,5 @@
                     android:textAlignment="center"
                     android:textColor="@color/dark_orange"
                     android:textSize="16sp" />
-
-
         </LinearLayout>
 </androidx.cardview.widget.CardView>
