--- a/app/src/main/res/layout/activity_shop_product.xml
+++ b/app/src/main/res/layout/activity_shop_product.xml
@@ -187,6 +187,13 @@
                     android:textColor="@color/white"
                     android:textSize="16sp"/>
             </LinearLayout>
+            <ProgressBar
+                android:id="@+id/progressBar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:visibility="gone"/>
+
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
