--- a/app/src/main/res/layout/activity_shop_product.xml
+++ b/app/src/main/res/layout/activity_shop_product.xml
@@ -115,18 +115,6 @@
                             android:text="25-30 mins"
                             android:textColor="@color/dark_brown"/>
 
-                        <View
-                            android:layout_width="1dp"
-                            android:layout_height="12dp"
-                            android:layout_marginHorizontal="8dp"
-                            android:background="@color/dark_gray"/>
-
-                        <TextView
-                            android:id="@+id/deliveryFee"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Free delivery"
-                            android:textColor="@color/dark_brown"/>
                     </LinearLayout>
 
                     <TextView
@@ -155,14 +143,14 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/productsRecyclerView"
-                android:layout_width="378dp"
-                android:layout_height="422dp"
-                android:layout_marginLeft="40dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
                 android:layout_marginTop="8dp"
-                android:layout_gravity="center"
-                android:layout_marginRight="40dp"
+                android:nestedScrollingEnabled="false"
                 android:clipToPadding="false"
-                android:paddingHorizontal="16dp" />
+                android:paddingHorizontal="8dp" />
 
             <LinearLayout
                 android:id="@+id/emptyProductsState"
