--- a/app/src/main/res/layout/fragment__home_student.xml
+++ b/app/src/main/res/layout/fragment__home_student.xml
@@ -69,27 +69,22 @@
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/bannerViewPager"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:layout_marginHorizontal="16dp"
-            android:clipToPadding="false"
-            android:paddingEnd="32dp"/>
+            android:layout_height="180dp"
+        android:layout_gravity="center"
+        android:layout_marginHorizontal="16dp"
+        android:clipToPadding="false"
+        android:paddingEnd="32dp"/>
+
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="10dp"
+            android:layout_gravity="center_horizontal"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
+            android:background="@color/yellow"
             android:orientation="horizontal">
 
-            <com.google.android.material.tabs.TabLayout
-                android:id="@+id/bannerIndicator"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:tabGravity="center"
-                app:tabIndicatorColor="@color/dark_orange"
-                app:tabIndicatorHeight="10dp"
-                app:tabSelectedTextColor="@android:color/transparent"
-                app:tabTextColor="@android:color/transparent" />
         </LinearLayout>
 
         <!-- Categories Section -->
