--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -20,7 +20,7 @@
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/ic_launcher_foreground"/>
+            android:src="@drawable/ic_launcher_foreground" />
 
         <TextView
             android:id="@+id/textViewProductName"
@@ -30,7 +30,7 @@
             android:textSize="22sp"
             android:textColor="@color/dark_brown"
             android:textStyle="bold"
-            android:layout_marginTop="10dp"/>
+            android:layout_marginTop="10dp" />
 
         <TextView
             android:id="@+id/textViewProductPrice"
@@ -39,7 +39,7 @@
             android:text="₹100"
             android:textSize="18sp"
             android:textColor="@color/dark_brown"
-            android:layout_marginTop="5dp"/>
+            android:layout_marginTop="5dp" />
 
         <TextView
             android:id="@+id/textViewProductDescription"
@@ -48,7 +48,7 @@
             android:textColor="@color/dark_brown"
             android:text="Description of the product..."
             android:textSize="16sp"
-            android:layout_marginTop="10dp"/>
+            android:layout_marginTop="10dp" />
 
         <Button
             android:id="@+id/buttonAddToCart"
@@ -58,7 +58,23 @@
             android:textColor="@color/white"
             android:textSize="18sp"
             android:backgroundTint="@color/dark_orange"
-            android:layout_marginTop="20dp"/>
+            android:layout_marginTop="20dp" />
+
+        <Button
+            android:id="@+id/buttonGoToCart"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Go to Cart"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:backgroundTint="@color/dark_orange"
+            android:layout_marginTop="20dp" />
     </LinearLayout>
 
+    <!-- Fragment Container (initially hidden) -->
+    <FrameLayout
+        android:id="@+id/fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone" />
 </FrameLayout>
