--- a/app/src/main/res/layout/fragment__home_student.xml
+++ b/app/src/main/res/layout/fragment__home_student.xml
@@ -66,15 +66,15 @@
         </com.google.android.material.card.MaterialCardView>
 
         <!-- Promo Banner Slider -->
+
+
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/bannerViewPager"
-            android:layout_width="match_parent"
+            android:layout_width="379dp"
             android:layout_height="180dp"
-        android:layout_gravity="center"
-        android:layout_marginHorizontal="16dp"
-        android:clipToPadding="false"
-        android:paddingEnd="32dp"/>
-
+            android:layout_gravity="center"
+            android:clipToPadding="false"
+            android:foregroundGravity="center" />
 
         <LinearLayout
             android:layout_width="match_parent"
