--- a/app/src/main/res/layout/fragment_home___vendor.xml
+++ b/app/src/main/res/layout/fragment_home___vendor.xml
@@ -143,10 +143,10 @@
           android:id="@+id/textEarningsAmount"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
+          android:layout_marginTop="8dp"
           android:text="₹0"
-          android:textSize="24sp"
-          android:textStyle="bold"
-          android:layout_marginTop="8dp"/>
+          android:textSize="16sp"
+          android:textStyle="bold" />
      </LinearLayout>
     </androidx.cardview.widget.CardView>
    </LinearLayout>
